<resources>
    <string name="app_name">SubmIt</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up.</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit_chapter">Submit chapter.</string>
    <string name="chapter_number">Chapter Number</string>
    <string name="chapter_name">Chapter Name</string>
    <string name="submit">Submit</string>
    <string name="supervisor">Supervisor</string>
    <string name="level">Level</string>
    <string name="project_topic">Project Topic</string>
    <string name="name_of_project">Name of project.</string>
    <string name="degree_program">Degree Program</string>
    <string name="create_project">Create project.</string>
    <string name="topic">Topic</string>
    <string name="project_details">Details.</string>
    <string name="create">Create</string>
    <string name="your_projects">Your projects.</string>
    <string name="student_number">Level 2.2</string>
    <string name="chapters">Chapters</string>

    <string-array name="lecturer_array">
        <item>Mr C. Zano</item>
        <item>Mr P. Chaka</item>
        <item>Mr Mhlanganiso</item>
        <item>Mr Kanyongo</item>
        <item>Mr Mapenduka</item>
        <item>Mr Chikwiriro</item>
        <item>Mr Muzurura</item>
        <item>Mr Muyambo</item>
    </string-array>

    <string-array name="level_array">
        <item>Undergrad - 2.2</item>
        <item>Undergrad - 4</item>
        <item>Postgrad</item>
        <item>PhD</item>
    </string-array>
</resources>